# dto/attandance/post_attandance_dto.go
@@ -4,10 +4,11 @@ type PostAttandanceDto struct {
 	AttendanceId string `json:"attendance_id" form:"attendance_id"`
 	UserId       string `json:"user_id" form:"user_id"`
 
-	CompanyCode string `json:"company_code" form:"company_code"`
-	OfficeCode  string `json:"office_code" form:"office_code"`
-	LogTime     string `json:"logtime" form:"logtime"`
-	FunctionNo  int    `json:"functionno" form:"functionno"`
+	CompanyCode  string `json:"company_code" form:"company_code"`
+	OfficeCode   string `json:"office_code" form:"office_code"`
+	CustomerCode string `json:"customer_code" form:"customer_code"`
+	LogTime      string `json:"logtime" form:"logtime"`
+	FunctionNo   int    `json:"functionno" form:"functionno"`
 	ActivityType string `json:"activity_type" form:"activity_type"`
 	ActionType   string `json:"action_type" form:"action_type"`
 
